Modal backdrop height fix; input field’s margin fix; removed grid containers that wrapped some alerts

--- a/src/components/common/authenticationLoader/AuthenticationLoader.scss
+++ b/src/components/common/authenticationLoader/AuthenticationLoader.scss
@@ -3,11 +3,11 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
-  background-color: rgba(209,213,219,0.5);
+  height: 100vh;
+  background-color: rgba(209, 213, 219, 0.5);
   z-index: 999;
 
   &__content {
-    background-color: #ffffff;
+    background-color: #fff;
   }
 }
