--- a/src/components/common/errorMessage/ErrorMessage.scss
+++ b/src/components/common/errorMessage/ErrorMessage.scss
@@ -3,11 +3,11 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   background-color: rgba(255, 255, 255, 0.5);
   z-index: 999;
 
   &__content {
-    background-color: #ffffff;
+    background-color: #fff;
   }
 }
